# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: project-check.yml
page_analyzer/: __init__.py  app.py  db.py  services.py
page_analyzer/templates/: base.html  index.html  url_analyze.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
tests/: test_app.py
