[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A web application that execute requests over the network and stores data in a database."
authors = ["Mikhail Orlov <crazyminer398@gmail.com>"]
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.scripts]
page-analyzer = "page_analyzer.app:main"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
validators = "^0.20.0"
requests = "^2.28.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.222"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
